Fix forge compile errors, need to fix JEI deprecation warnings